--- a/src/ui/optionPanels/PSLOptionsPanel.form
+++ b/src/ui/optionPanels/PSLOptionsPanel.form
@@ -4,9 +4,13 @@
     <rowspec value="center:5px:noGrow"/>
     <rowspec value="top:4dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
-    <colspec value="fill:376px:noGrow"/>
+    <colspec value="fill:88px:noGrow"/>
+    <colspec value="left:5dlu:noGrow"/>
+    <colspec value="fill:d:grow"/>
+    <colspec value="left:1dlu:noGrow"/>
+    <colspec value="fill:1px:noGrow"/>
     <constraints>
-      <xy x="20" y="20" width="376" height="233"/>
+      <xy x="20" y="20" width="419" height="233"/>
     </constraints>
     <properties>
       <opaque value="true"/>
@@ -14,50 +18,42 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="bc8a6" layout-manager="FormLayout">
-        <rowspec value="center:d:grow"/>
-        <colspec value="fill:82px:noGrow"/>
-        <colspec value="fill:8px:noGrow"/>
-        <colspec value="fill:d:grow"/>
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <forms/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="4c4c1" class="javax.swing.JButton" binding="ppgLibButton">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-              <forms top="0" left="5" bottom="0" right="0"/>
-            </constraints>
-            <properties>
-              <text value="PPG &amp;LIB"/>
-            </properties>
-          </component>
-          <component id="f1fd3" class="javax.swing.JTextField" binding="ppgLibTextField">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-              <forms defaultalign-horz="false" defaultalign-vert="false"/>
-            </constraints>
-            <properties>
-              <background color="-1"/>
-              <editable value="false"/>
-              <focusable value="false"/>
-              <opaque value="false"/>
-              <text value=""/>
-            </properties>
-          </component>
-        </children>
-      </grid>
       <vspacer id="38026">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="5" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
           <forms defaultalign-vert="false"/>
         </constraints>
       </vspacer>
+      <component id="4c4c1" class="javax.swing.JButton" binding="ppgLibButton">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <forms top="0" left="5" bottom="0" right="0"/>
+        </constraints>
+        <properties>
+          <text value="PPG &amp;LIB"/>
+        </properties>
+      </component>
+      <component id="f1fd3" class="javax.swing.JTextField" binding="ppgLibTextField">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+          <forms defaultalign-horz="false" defaultalign-vert="false"/>
+        </constraints>
+        <properties>
+          <background color="-1"/>
+          <editable value="false"/>
+          <focusable value="false"/>
+          <opaque value="false"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <hspacer id="cee45">
+        <constraints>
+          <grid row="2" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <forms defaultalign-horz="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
   <inspectionSuppressions>
