--- a/src/ui/optionPanels/VHDLBehOptionsPanel.form
+++ b/src/ui/optionPanels/VHDLBehOptionsPanel.form
@@ -2,15 +2,15 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.optionPanels.VHDLBehOptionsPanel">
   <grid id="27dc6" binding="mainPanel" layout-manager="FormLayout">
     <rowspec value="top:d:noGrow"/>
-    <colspec value="fill:d:grow"/>
+    <colspec value="fill:367px:grow"/>
     <constraints>
-      <xy x="20" y="20" width="386" height="130"/>
+      <xy x="20" y="20" width="386" height="131"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <grid id="3c052" default-binding="true" layout-manager="FormLayout">
-        <rowspec value="top:130px:noGrow"/>
+        <rowspec value="top:d:noGrow"/>
         <colspec value="fill:183px:noGrow"/>
         <colspec value="left:4dlu:noGrow"/>
         <colspec value="fill:max(d;4px):noGrow"/>
@@ -60,20 +60,22 @@
                 </constraints>
                 <properties>
                   <selected value="true"/>
-                  <text value="&amp;Minimized"/>
+                  <text value="&amp;Minimized (default)"/>
                 </properties>
               </component>
             </children>
           </grid>
           <grid id="8577" layout-manager="FormLayout">
             <rowspec value="center:max(d;4px):noGrow"/>
-            <rowspec value="top:4dlu:noGrow"/>
+            <rowspec value="top:1dlu:noGrow"/>
+            <rowspec value="center:d:grow"/>
+            <rowspec value="top:1dlu:noGrow"/>
             <rowspec value="center:max(d;4px):noGrow"/>
-            <rowspec value="top:4dlu:noGrow"/>
+            <rowspec value="top:2dlu:noGrow"/>
             <rowspec value="center:max(d;4px):noGrow"/>
-            <colspec value="fill:89px:noGrow"/>
-            <colspec value="left:4dlu:noGrow"/>
-            <colspec value="fill:max(d;4px):noGrow"/>
+            <rowspec value="top:2dlu:noGrow"/>
+            <rowspec value="center:max(d;4px):noGrow"/>
+            <colspec value="fill:177px:noGrow"/>
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
               <forms/>
@@ -88,42 +90,44 @@
                 </constraints>
                 <properties>
                   <selected value="true"/>
-                  <text value="As F&amp;unctions"/>
+                  <text value="F&amp;unctions (default)"/>
                 </properties>
               </component>
               <component id="36a10" class="javax.swing.JRadioButton" binding="asGraphsRadioButton" default-binding="true">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                   <forms/>
                 </constraints>
                 <properties>
-                  <text value="As &amp;Graphs"/>
-                </properties>
-              </component>
-              <component id="ad0d7" class="javax.swing.JCheckBox" binding="subGraphsCheckBox" default-binding="true">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                  <forms/>
-                </constraints>
-                <properties>
-                  <text value="&amp;Extra-Graphs"/>
-                  <toolTipText value="Extract each boolean sub-expression as an Extra-Graph"/>
+                  <text value="&amp;Graphs"/>
                 </properties>
               </component>
               <component id="9bfed" class="javax.swing.JRadioButton" binding="flattenRadioButton">
+                <constraints>
+                  <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <forms/>
+                </constraints>
+                <properties>
+                  <text value="F&amp;latten"/>
+                  <toolTipText value="Flatten/inline hierarchical CS into Sub-Graph (nodes)"/>
+                </properties>
+              </component>
+              <component id="957ca" class="javax.swing.JRadioButton" binding="extraGraphsRadioButton" default-binding="true">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                   <forms/>
                 </constraints>
                 <properties>
-                  <background color="-1"/>
-                  <foreground color="-16777216"/>
-                  <hideActionText value="true"/>
-                  <opaque value="false"/>
-                  <selected value="false"/>
-                  <text value="F&amp;latten"/>
-                  <toolTipText value="Flatten/inline hierarchical CS into Sub-Graph (nodes)"/>
+                  <text value="Functions + &amp;Extra-Graphs"/>
+                  <toolTipText value="Extract each boolean sub-expression as an Extra-Graph"/>
                 </properties>
+              </component>
+              <component id="730f5" class="javax.swing.JSeparator">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <forms defaultalign-horz="false" defaultalign-vert="false"/>
+                </constraints>
+                <properties/>
               </component>
             </children>
           </grid>
@@ -141,6 +145,7 @@
       <member id="9bfed"/>
       <member id="538d0"/>
       <member id="36a10"/>
+      <member id="957ca"/>
     </group>
   </buttonGroups>
 </form>
