--- a/src/ui/optionPanels/VHDLBehDdOptionsPanel.form
+++ b/src/ui/optionPanels/VHDLBehDdOptionsPanel.form
@@ -119,7 +119,7 @@
                       <text value="&amp;Expand"/>
                     </properties>
                   </component>
-                  <component id="b07c1" class="javax.swing.JRadioButton">
+                  <component id="b07c1" class="javax.swing.JRadioButton" binding="collapseCheckBox">
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                       <forms/>
